# py-password-checker

./: .gitignore  README.md  pyproject.toml  tests.py
examples/: example.ipynb
pypasscheck/: checker.py
tests/: tests.py
